# theurgy

./: .gitignore  Cargo.toml  LICENSE  README.md  install  uninstall
.github/: AI_DOCS.md  PUSH_READY_CHECKLIST.md  ROLLING_AUDIT.md  THEURGY_ETHOS.md
.tests/: README.md
docs/: app-publish-secrets.md  architecture.md  databases.md  desktop.md  mobile-browser-proof-quarantine.md  platform-quarantine.md  web-runtime-harness.md  web.md
schemas/: theurgy-action-ir-v1.json  theurgy-desktop-surface-ir-v1.json  theurgy-generated-runtime-v1.json  theurgy-mobile-surface-ir-v1.json  theurgy-operation-history-request-v1.json  theurgy-operation-history-v1.json  theurgy-operation-status-request-v1.json  theurgy-operation-status-v1.json  theurgy-product-ir-v1.json  theurgy-runtime-action-request-v1.json  theurgy-runtime-action-result-v1.json  theurgy-runtime-manifest-v1.json  theurgy-runtime-state-request-v1.json  theurgy-runtime-status-request-v1.json  theurgy-runtime-status-v1.json  theurgy-runtime-subscribe-status-request-v1.json  theurgy-state-snapshot-v1.json
scripts/: theurgy-cargo  theurgy-paths.sh
spells/: assay-theurgy  capture-theurgy-cgi-context  check-theurgy-web-runtime  compile-theurgy-app  compile-theurgy-native  conjure-enterprise-website  conjure-native-desktop  firewall-darwin  firewall-linux  inspect-theurgy-project  install-theurgy-browser-proof-runtime  install-theurgy-web-runtime  project-theurgy-surface  replay-theurgy-cgi-fixture  run-theurgy-runtime-request  stage-theurgy-app-runtime  validate-theurgy-action-ir  validate-theurgy-generated-runtime  (+12 more)
(+8 files in other folders)
