[package]
name = "theurgy"
version = "0.1.0"
edition = "2021"
license = "LicenseRef-OWL-3.1"
description = "Enterprise-level Wizardry for high-performance native apps and websites."

[[bin]]
name = "theurgy-runtime"
path = "src/main.rs"

[dependencies]
serde_json = "1"

[package.metadata.theurgy.web_runtime]
phase = "contract-and-adapter"
front_doors = ["nginx", "lighttpd"]
adapters = ["http", "fastcgi", "cgi-compat"]
router = "axum"
serialization = "serde"
templates = "tera"
search = "tantivy"
zola_core_runtime = false
